hello/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: http
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: hello
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - hello.k8s.axatol.home
      secretName: hello-tls
  rules:
    - host: hello.k8s.axatol.home
      http: &hello
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: svc
                port:
                  name: http
    - host: hello.k8s.axatol.xyz
      http: *hello
